# parkrun-mcp

./: .gitignore  README.md  main.py  pyproject.toml  test_main.py
config/: mcp_tokens.toml.example  nginx-parkrun-mcp.conf
parkrun_mcp/: __main__.py  auth.py  oauth.py  queries.py  server.py
